# DevOpsComplexityCMake

./: .env-build  .env-package  CMakeLists.txt  compose.yml  debian.cmake  fedora.cmake
.github/workflows/: Build.yml  Package.yml
docker/fedora/: Dockerfile
docker/ubuntu/: Dockerfile
